# cheri-thunk

./: CMakeLists.txt  LICENSE  README.md  thunk.c  thunk.h  thunk_gate.c
arch/aarch64/: thunk_machdep.c
arch/aarch64/arch/: thunk-patch.h  thunk.h
arch/aarch64c/: gate_machdep.c  gate_thunk.S  thunk_machdep.c
arch/aarch64c/arch/: thunk-asm.h  thunk-patch.h  thunk.h
cmake/: morello-toolchain.cmake
src/: thunk-gate.h  thunk.c  thunk.h  thunk_gate.c  thunk_preload.c
test/: CMakeLists.txt  test.h  test_malloc.c  test_thunk_core.c  test_thunk_gate.c
test/hello/: hello.S  hello.c  hello.h
